2012-04-18  Sancho Lerena <slerena@artica.es>

	* operation/servers/recon_view.php: Fix column header.

	* godmode/agentes/module_manager_editor_plugin.php: Now plugin description
	is shown formatted (\n -> <br>). Some fields have better layout.

	* godmode/servers/plugin.php: Ajax load of description is now formatted.

	* godmode/servers/manage_recontask.php: Fix link to show recon server.

	* godmode/servers/manage_recontask_form.php: Wider textarea.

	* pandoradb_data.sql: New defaults (4 plugins, 2 recon scripts).

	* include/functions_events.php: More space visible in event info, smaller
	font.

	* include/config_process.php: Updated version.

2012-04-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/javascript/pandora.js
	 operation/agentes/stat_win.php: Changed width attribute in popup 
	 window for graphs. 

2012-04-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora_minimal.css
	 include/javascript/pandora.js
	 include/functions_ui.php
	 operation/agentes/stat_win.php: Changed layout of interactive graph
	 menu.
	 
	* images/graphmenu_arrow.png
	 images/graphmenu_arrow_hide.png: Added images for interactive 
	 graph menu.

2012-04-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php: into the function
	"agents_get_agent_id" the parameter "$io_safe_input" for transform
	the names if true, by default false.
	
	* operation/agentes/networkmap.topology.php,
	operation/agentes/networkmap.php, include/functions_ui.php: cleaned
	source code style.

2012-04-18  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php: Changes in tab os.

2012-04-18  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php: Several esthetic changes.

2012-04-18 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* godmode/agentes/agent_manager.php: Fixed a problem with links
	and new menu strcuture.

2012-04-18 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/agent_disk_conf_editor.php: Print message